# SRNet

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: code-quality-pr.yaml  test.yml
configs/data/: mnist.yaml
configs/hydra/: default.yaml
configs/model/: mnist.yaml
src/: eval.py  main.py  train.py
src/srnet/: eval.py  train.py
src/srnet/utils/: __init__.py  instantiators.py  logging_utils.py  rich_utils.py  utils.py
tests/: test_datamodules.py  test_eval.py  test_train.py
